--- a/src/styles.css
+++ b/src/styles.css
@@ -35,12 +35,12 @@ a {
 a:link {
     color: var(--default-font-color);
   }
-  
+
   /* visited link */
   a:visited {
     color: var(--default-font-color);
   }
-  
+
   /* mouse over link */
   a:hover {
     /* color: var(--paleta-col-1); */
@@ -50,13 +50,13 @@ a:link {
 
 
 
-p:focus, div:focus { 
-    outline: none; 
+p:focus, div:focus {
+    outline: none;
 }
 
 html, body { height: 100%; }
-body { 
-    margin: 0; 
+body {
+    margin: 0;
     /* font-family: Roboto, "Helvetica Neue", sans-serif;  */
 }
 
@@ -92,7 +92,7 @@ section {
 .component-container {
     position: relative;
     margin: auto;
-    max-width: 1260px; 
+    max-width: 1260px;
 }
 
 .content-container {
@@ -113,11 +113,11 @@ section {
 }
 
 .header-footer {
-    margin: auto;   
-    max-width: 300px;
+    margin: auto;
+    max-width: 200px;
     width: 100%;
     height: 100%;
-    padding: 10px;    
+    padding: 10px;
 }
 
 .img-container {
@@ -167,7 +167,7 @@ section {
 }
 
 .router-link {
-    cursor: pointer;    
+    cursor: pointer;
     transition: color 1s cubic-bezier(0.075, 0.82, 0.165, 1);
     font-size: larger;
 }
